// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/thought-chain/demo/basic.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:500px"
>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            1
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            2
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            3
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            4
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/thought-chain/demo/collapsible.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:500px"
>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            1
          </span>
          <div
            class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                <span
                  aria-label="right"
                  class="anticon anticon-right ant-thought-chain-item-collapse-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
                Click me to expand the content
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              Collapsible
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            2
          </span>
          <div
            class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                <span
                  aria-label="right"
                  class="anticon anticon-right ant-thought-chain-item-collapse-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
                Click me to expand the content
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              Collapsible
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/thought-chain/demo/customization.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:500px"
>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item ant-thought-chain-item-success-error"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-content"
        >
          <div
            class="ant-thought-chain-item-content-box"
          >
            <article
              class="ant-typography"
            >
              <div
                class="ant-typography"
              >
                In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
              </div>
              <div
                class="ant-typography"
              >
                After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
                <!-- -->
                <span
                  class="ant-typography"
                >
                  <strong>
                    uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
                  </strong>
                </span>
              </div>
            </article>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-footer"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Thought Chain Item Footer
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-thought-chain-item ant-thought-chain-item-error-pending"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-content"
        >
          <div
            class="ant-thought-chain-item-content-box"
          >
            <article
              class="ant-typography"
            >
              <div
                class="ant-typography"
              >
                In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
              </div>
              <div
                class="ant-typography"
              >
                After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
                <!-- -->
                <span
                  class="ant-typography"
                >
                  <strong>
                    uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
                  </strong>
                </span>
              </div>
            </article>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-footer"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Thought Chain Item Footer
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-thought-chain-item ant-thought-chain-item-pending-pending"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-content"
        >
          <div
            class="ant-thought-chain-item-content-box"
          >
            <article
              class="ant-typography"
            >
              <div
                class="ant-typography"
              >
                In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
              </div>
              <div
                class="ant-typography"
              >
                After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
                <!-- -->
                <span
                  class="ant-typography"
                >
                  <strong>
                    uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
                  </strong>
                </span>
              </div>
            </article>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-footer"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Thought Chain Item Footer
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/thought-chain/demo/nested.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:500px"
>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            1
          </span>
          <div
            class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                <span
                  aria-label="right"
                  class="anticon anticon-right ant-thought-chain-item-collapse-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
                1 - Thought Chain Item
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-footer"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            type="button"
          >
            <span>
              1 - Thought Chain Item Footer
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            2
          </span>
          <div
            class="ant-thought-chain-item-header-box ant-thought-chain-item-collapsible"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                <span
                  aria-label="right"
                  class="anticon anticon-right ant-thought-chain-item-collapse-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
                2 - Thought Chain Item
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="ant-thought-chain-item-footer"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            type="button"
          >
            <span>
              2 - Thought Chain Item Footer
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/thought-chain/demo/size.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:500px"
>
  <div
    class="ant-card-body"
  >
    <div
      class="ant-radio-group ant-radio-group-outline"
      style="margin-bottom:16px"
    >
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="large"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Large
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="middle"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Default
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="small"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Small
        </span>
      </label>
    </div>
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            1
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            2
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            3
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            4
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item Title
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              description
            </span>
          </div>
          <div
            class="ant-thought-chain-item-extra"
          >
            <button
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="more"
                  class="anticon anticon-more"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="more"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/thought-chain/demo/status.tsx correctly 1`] = `
<div
  class="ant-card ant-card-bordered"
  style="width:500px"
>
  <div
    class="ant-card-body"
  >
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="margin-bottom:16px"
      type="button"
    >
      <span>
        Run Next
      </span>
    </button>
    <div
      class="ant-thought-chain ant-thought-chain-middle"
    >
      <div
        class="ant-thought-chain-item ant-thought-chain-item-success-error"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item - 1
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              status: success
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-thought-chain-item ant-thought-chain-item-error-error"
      >
        <div
          class="ant-thought-chain-item-header"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-icon ant-thought-chain-item-icon"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-thought-chain-item-header-box"
          >
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-title"
            >
              <strong>
                Thought Chain Item - 2
              </strong>
            </span>
            <span
              class="ant-typography ant-typography-secondary ant-typography-ellipsis ant-typography-ellipsis-single-line ant-thought-chain-item-desc"
            >
              status: error
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
